Fixed a bug where the logo was smaller under the collapsed state

--- a/sass/components/cms-menu/_cms-menu.scss
+++ b/sass/components/cms-menu/_cms-menu.scss
@@ -39,6 +39,7 @@
     }
 
     .cms-logo {
+      height: auto;
       padding-left: 1rem;
       padding-right: 1rem;
       border-bottom: 1px solid $border-color;
